# authsys

./: .gitignore  LICENSE  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini
accounts/: adapters.py  admin.py  apps.py  auth_backend.py  forms.py  mixins.py  models.py  serializers.py  services.py  signals.py  urls_api.py  urls_html.py  views_api.py  views_html.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_api_admin.py  test_api_auth.py  test_models.py  test_signals.py  test_views_html.py
authsys/: asgi.py  settings.py  urls.py  wsgi.py
core/: config.py  jwt.py  logging_setup.py  pagination.py  utils.py
mockapi/: middleware.py  serializers.py  urls.py  views.py
rbac/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views_api.py
rbac/migrations/: 0001_initial.py  0002_create_default_roles.py
rbac/tests/: test_permissions.py
static/css/: admin_custom.css  style.css
static/js/: jwt_ajax.js
templates/accounts/: account_deleted.html  base.html  login.html  me.html  profile.html  register.html
templates/admin/: login.html
